--- a/game/114514/114514.md
+++ b/game/114514/114514.md
@@ -1,2 +1,6 @@
 # 114514
-![114514](IMG_5857.png)
+![114514](IMG_5857.png)\
+▲ いいよ、こいよ！\
+\
+因為`114514`音似`いいよ、こいよ！`\
+想知道更多嗎？點[這裡](https://game.udn.com/game/story/122089/8738474?utm_source=facebook&utm_medium=udngame&utm_campaign=fbpost&fbclid=IwY2xjawKRRdlleHRuA2FlbQIxMQABHnzM4Oj_45tVOr7S1OnAXq-EMlBWRWeYkbce91iSp82Ph4Z9_uuIZCGZaKcr_aem_1hQi_66CmUnNanKafnQgkA)查看更多
